@@ -13,15 +13,18 @@ CVSREPOSITORIES += cvs.sdcc.sourceforge.net:/cvsroot/sdcc
 # Add sdcc-extra to the list of source trees, that are archieved and copied to the snapshot page
 ARCHIVETREES += sdcc-extra
 
+# CVSACCESS=:pserver:anonymous
+CVSACCESS=:ext:sdcc-builder
+
 # Override the default fetch behavoiur
 # Default rule for fetching a tree from cvs
 $(STAMPDIR)/sdcc-extra.fetched: $(ORIGDIR) $(STAMPDIR)
-	grep -q :pserver:anonymous@cvs.sdcc.sourceforge.net:/cvsroot/sdcc $(HOME)/.cvspass || \
-	  cvs -d:pserver:anonymous@cvs.sdcc.sourceforge.net:/cvsroot/sdcc login
+	# grep -q :pserver:anonymous@cvs.sdcc.sourceforge.net:/cvsroot/sdcc $(HOME)/.cvspass || \
+	#  cvs -d:pserver:anonymous@cvs.sdcc.sourceforge.net:/cvsroot/sdcc login
 	cd $(ORIGDIR); \
 	sh -c 'i=0; while ((i < 600)); do { \
 	  ((i += 1)); \
-	  cvs $(CVSFLAGS) -d:pserver:anonymous@cvs.sdcc.sourceforge.net:/cvsroot/sdcc co sdcc-extra \
+	    cvs $(CVSFLAGS) -d$(CVSACCESS)@cvs.sdcc.sourceforge.net:/cvsroot/sdcc co sdcc-extra \
 	    && break ; \
 	  echo CVS failed $$i: `date`; \
 	  sleep 1; \
